app/globals.css
/* Generic Styles */

* {
    /* outline: 1px solid red; */
    font-family: "Switzer";
    list-style: none;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
}

body {
    background-color: #1a1a1a;
    display: flex;
    flex-direction: column;
}

main {
    z-index: 0;
}

.divider {
    width: calc(100% - 64px);
    border-top: solid 1px #888888;
    margin: 0 32px;
}

.divider-bottom {
    border-top: solid 1px #6b6b6b;
    width: 100%;
}

/* Event Styles */

.category-tag {
    border-radius: 4px;
    color: #aaaaaa;
    cursor: pointer;
    display: flex;
    font-size: 14px;
    letter-spacing: -0.6px;
    outline: 2px solid #aaaaaa;
    padding: 6px 8px;
    width: fit-content;
}

.category-wrapper {
    display: flex;
    gap: 12px;
    flex-wrap: wrap;
}

.events {
    display: flex;
    flex-direction: column;
    gap: 24px;
    padding: 160px 64px 48px;
}

.event-card {
    cursor: pointer;
    background-color: #272727;
    border-radius: 5px;
    padding: 16px 16px 20px;
}

.event-card-top {
    align-items: center;
    color: white;
    display: flex;
    margin: 0 0 12px;
    justify-content: space-between;
}

.event-card-countdown {
    color: #aaa;
    text-align: right;
    font-family: "Switzer";
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: 1.2px;
    height: fit-content;
}

.event-card-info {
    color: #aaa;
    font-family: "Switzer";
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: -0.6px;
    margin: 2px 0 0;
}

.event-card-title {
    color: white;
    font-family: "Switzer";
    font-size: 20px;
    font-style: normal;
    font-weight: 600;
    letter-spacing: -1px;
    line-height: 100%;
}

.event-card-thumbnail {
    width: 100%;
}

.events-wrapper {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 24px;
}

/* Navbar Styles */

.navbar {
    align-items: center;
    backdrop-filter: blur(8px);
    --webkit-backdrop-filter: blur(8px);
    background: rgba(39, 39, 39, 0.85);
    border: 1px solid rgba(255, 255, 255, 0.35);
    border-radius: 5px;
    box-shadow:
        0 4px 20px rgba(0, 0, 0, 0.3),
        inset 0 1px 0 rgba(255, 255, 255, 0.1);
    color: #e2ff00;
    display: flex;
    justify-content: space-between;
    margin: 32px;
    padding: 16px 32px;
    position: fixed;
    width: calc(100% - 128px);
    z-index: 2;
}

.navbar-hamburger {
    display: block;
}

.navbar-items {
    display: flex;
    align-items: center;
    margin-left: auto;
    gap: 2vw;
}

.navbar-items .button-standard {
    font-size: calc(8px + 0.5vw);
    margin-right: 1vw;
    padding: 8px 16px !important;
}

.navbar-logo {
    width: auto;
}

.navbar-link {
    border-right: 1px solid white;
    color: white;
    padding-right: 2vw;
    padding-bottom: 0.05vw;
    position: relative;
}
.navbar-link.active::after {
    width: calc(100% - 2vw);
}

.navbar-link::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0;
    height: 1px;
    background: white;
    transition: width 0.4s ease;
}

.navbar-link:hover::after {
    width: calc(100% - 2vw);
}

.navbar-open {
    background-color: #272727;
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    padding: 0 64px 0;
    padding-top: 2vw;
    width: calc(100% - 128px);
    position: fixed;
    z-index: 1;
}

.navbar-open-bottom {
    display: flex;
    gap: 32px;
    position: fixed;
    bottom: 0.5vw;
    left: 50%;
    transform: translateX(-50%);
}

.navbar-menu {
    margin: 0 0 48px;
    width: 100%;
}

.nav-item {
    color: #6b6b6b;
    border-top: solid 1px #6b6b6b;
    border-bottom: solid 1px #6b6b6b;
    cursor: pointer;
    align-items: center;
    justify-content: space-between;
    display: flex;
    padding: 0 16px 0 0;
    text-transform: capitalize;
    width: 100%;
}

.nav-item:hover {
    border-top: solid 1px white;
    border-bottom: solid 1px white;
    color: white;
}

.nav-item-index {
    font-size: calc(30px + 0.5vw);
    font-style: normal;
    font-weight: 400;
    line-height: 80%;
    letter-spacing: 0.8px;
}
@media (min-width: 1400px) {
    .navbar-hamburger {
        display: none;
    }
    .navbar-link {
        font-size: calc(10px + 0.5vw);
    }
    .navbar-logo {
        max-height: 3vw;
    }
}
@media (max-width: 1400px) {
    .navbar {
        height: calc(100% + 1vw);
        max-height: 3vw;
    }
    .navbar-link {
        display: none;
    }
    .navbar-logo {
        height: calc(30px+ 1vw);
        max-height: 8vw;
    }
}

/* Layout Styles*/

.nav-item-title {
    font-family: Syne;
    font-size: 7vw;
    font-style: normal;
    font-weight: 500;
    line-height: 80%;
    letter-spacing: 1.8px;
    text-transform: uppercase;
}

.content-block {
    background-color: #272727;
    border-radius: 5px;
    height: fit-content;
    margin: 16px 32px;
    padding: 16px;
}

/* Button Styles */

.button-standard {
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-family: "Switzer";
    font-size: 20px;
    font-weight: 500;
    height: fit-content;
    padding: 12px 16px;
    width: fit-content;
}

.button-lime {
    background-color: #e2ff00;
    color: black;
}

.button-grey {
    background-color: #6b6b6b;
    color: white;
}

.button-red {
    background-color: #df5f5f;
    color: white;
}

.home-a {
    background-image: url(../public/background.webp);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 160px 64px 64px;
}

.home-title {
    color: #fff;
    font-family: Syne;
    font-size: 100px;
    font-style: normal;
    font-weight: 500;
    line-height: 80%;
    letter-spacing: 1.2px;
    text-transform: uppercase;
}

.home-a-content {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.home-b {
    display: flex;
    flex-direction: column;
    gap: 24px;
    padding: 32px 64px 48px;
}

.home-b-top {
    align-items: center;
    display: flex;
    justify-content: space-between;
}

.section-title {
    color: #fff;
    font-family: Syne;
    font-size: 24px;
    font-style: normal;
    font-weight: 500;
    line-height: 80%;
    letter-spacing: 1.2px;
    text-transform: uppercase;
}

.standard-text {
    color: #fff;
    font-family: "Switzer";
    font-size: 24px;
    font-style: normal;
    font-weight: 400;
    line-height: 100%;
    letter-spacing: -0.7px;
    margin: 0 0 16px;
}

.footer {
    align-items: center;
    background-color: #272727;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 16px;
    height: fit-content;
    padding: 32px;
}

.footer-main {
    align-items: center;
    display: flex;
    gap: 64px;
    justify-content: center;
}

.footer-logo {
    width: 300px;
}

.footer-bottom {
    align-items: center;
    color: #6b6b6b;
    display: flex;
    flex-direction: column;
    gap: 16px;
    justify-content: center;
    width: 720px;
}

.footer-links {
    display: flex;
    gap: 32px;
}

.footer-li {
    display: flex;
    flex-direction: column;
    gap: 2px;
}

.footer-link {
    color: #fff;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: 100%;
    letter-spacing: -1px;
}

.home-c {
    display: flex;
    flex-direction: column;
    padding: 32px 64px 48px;
    gap: 16px;
}

.home-c-img-left {
    object-fit: cover;
    height: 100%;
    width: 100%;
}

.home-c-img-right {
    object-fit: cover;
    height: 50%;
    width: 100%;
}

.home-c-img-wrapper-outer {
    display: flex;
    gap: 16px;
    object-fit: cover;
    height: 50vh;
    width: 100%;
}

.home-c-img-wrapper-left {
    width: 55%;
}

.home-c-img-wrapper-right {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 45%;
}

.sponsor-card {
    align-items: center;
    cursor: pointer;
    background-color: #272727;
    border-radius: 5px;
    display: flex;
    height: 196px;
    justify-content: center;
}

.sponsor-icon {
    width: 180px;
}

.sponsor-wrapper {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 16px;
}

.social-media-link {
    display: flex;
    border-radius: 50%;
    background-color: #1a1a1a;
}

.social-media-link-wrapper {
    display: flex;
    justify-content: space-between;
    width: 300px;
}

.social-media-icon {
    width: 52px;
}

/* About Styles */

.about {
    display: flex;
    flex-direction: column;
    gap: 32px;
    padding: 160px 64px 64px;
}

.about-img {
    object-fit: cover;
    height: 512px;
    width: 100%;
    margin: 0 0 8px;
}

.about-top {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.about-bottom {
    display: flex;
    gap: 32px;
}

.about-bottom-section {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.about-buttons {
    display: flex;
    gap: 16px;
}

@media (width < 1400px) {
    .events-wrapper {
        grid-template-columns: auto auto;
    }

    .nav-item-title {
        font-size: 7vw;
    }
}

@media (width < 950px) {
    .home-a {
        padding: 160px 32px 64px;
    }

    .home-b {
        padding: 32px 32px 48px;
    }

    .home-c {
        padding: 32px 32px 48px;
    }

    .home-title {
        font-size: 64px;
    }

    .events-wrapper {
        grid-template-columns: auto;
    }

    .sponsor-wrapper {
        grid-template-columns: auto;
    }

    .navbar-open {
        align-items: center;
    }

    .nav-item-title {
        font-size: 3vw;
    }

    .nav-item {
        padding: 8px 16px 8px 0;
    }

    .navbar-open-bottom {
        align-items: center;
        flex-direction: column;
        gap: 16px;
    }

    .about {
        padding: 160px 32px 64px;
    }

    .about-bottom {
        flex-direction: column;
    }

    .footer {
        align-items: start;
    }

    .footer-main {
        align-items: start;
        flex-direction: column;
        gap: 16px;
    }

    .footer-links {
        flex-direction: column;
        gap: 16px;
    }

    .footer-bottom {
        width: fit-content;
    }
}

@media (width < 700px) {
    .navbar {
        height: fit-content;
        margin: 32px 16px;
        padding: 16px 16px;
        width: calc(100% - 64px);
    }

    .events {
        padding: 160px 32px 48px;
    }

    .home-c-img-wrapper-left {
        width: 100%;
    }

    .home-c-img-wrapper-right {
        display: none;
    }

    .nav-item-title {
        font-size: 32px;
    }

    .button-standard {
        font-size: 16px;
        padding: 12px 12px;
    }

    .navbar-open-bottom {
        bottom: 32px;
    }
}

